--- a/package.json
+++ b/package.json
@@ -25,11 +25,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.453.0",
-    "next": "15.0.1",
-    "next-themes": "^0.3.0",
-    "react": "19.0.0-rc-69d4b800-20241021",
+    "next": "14.2.16",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-hook-form": "^7.53.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
