--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-table": "^8.20.5",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.16",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "react": "^18",
+    "react-dom": "^18",
     "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.53.1",
     "tailwind-merge": "^2.5.4",
